devops-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-test    
  name: devops-test
spec:
  ports:
  - name: http-web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: devops-test
  type: ClusterIP
