devops-test/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: devops-test
spec:
  host: devops-test
  subsets:
  - labels:
      version: master
    name: master
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
