devops-test/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-test
spec:
  gateways:
  - devops-test
  hosts:
  - devops-test.abx.net
  http:
  - route:
    - destination:
        host: devops-test
        port:
          number: 3000
        subset: master
